--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^4.19.1",
     "eslint-config-google": "^0.9.1",
     "gulp": "^3.9.1",
+    "gulp-html-minifier": "^0.1.8",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^4.1.0",
     "gulp-load-plugins": "^1.5.0",
